--- a/Proyecto.csproj
+++ b/Proyecto.csproj
@@ -61,6 +61,12 @@
     <Compile Include="Inicio.Designer.cs">
       <DependentUpon>Inicio.cs</DependentUpon>
     </Compile>
+    <Compile Include="LoginRegistro.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LoginRegistro.Designer.cs">
+      <DependentUpon>LoginRegistro.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Usuario_Admin.cs">
@@ -74,6 +80,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Inicio.resx">
       <DependentUpon>Inicio.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LoginRegistro.resx">
+      <DependentUpon>LoginRegistro.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
